// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InvertedButton accepts textStyle prop 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "borderColor": "rgba(248, 248, 248, 1)",
      "borderWidth": 1,
      "height": 36,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AvantGardeGothicITC",
        },
        Object {
          "color": "rgba(204, 204, 204, 1)",
          "fontSize": 20,
          "opacity": 1,
        },
      ]
    }
  >
    I AM AN INVERTED BUTTON
  </Text>
</View>
`;

exports[`InvertedButton renders properly 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "borderColor": "rgba(248, 248, 248, 1)",
      "borderWidth": 1,
      "height": 36,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AvantGardeGothicITC",
        },
        Object {
          "color": "rgba(204, 204, 204, 1)",
          "opacity": 1,
        },
      ]
    }
  >
    I AM AN INVERTED BUTTON
  </Text>
</View>
`;

exports[`InvertedButtonWithSpinner accepts textStyle prop 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 1)",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={null}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 12,
          },
          Object {
            "fontFamily": "AvantGardeGothicITC",
          },
          Object {
            "color": "white",
            "fontSize": 20,
            "opacity": 1,
          },
        ]
      }
    >
      I AM AN INVERTED BUTTON
    </Text>
  </View>
</View>
`;

exports[`InvertedButtonWithSpinner renders properly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 1)",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={null}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 12,
          },
          Object {
            "fontFamily": "AvantGardeGothicITC",
          },
          Object {
            "color": "white",
            "opacity": 1,
          },
        ]
      }
    >
      I AM AN INVERTED BUTTON
    </Text>
  </View>
</View>
`;
